--- a/DataStructure/pom.xml
+++ b/DataStructure/pom.xml
@@ -3,4 +3,8 @@
   <groupId>Shekhar</groupId>
   <artifactId>DataStructure</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+  	<maven.compiler.source>1.7</maven.compiler.source>
+  	<maven.compiler.target>1.7</maven.compiler.target>
+</properties>
 </project>
